infra/k8s-prod/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: grafana.ingress-nginx.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-proxy
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: prometheus-server.ingress-nginx.svc.cluster.local
