infra/k8s-prod/monitoring-ext-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: grafana.ingress-nginx.svc.cluster.local
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus-server.ingress-nginx.svc.cluster.local
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
